--- a/Servicios.html
+++ b/Servicios.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/estiloServicios.css">
 </head>
 
 <body>
@@ -59,7 +60,52 @@
         </div>
 
         <div id="cont" class="row pt-5">
+          <div class="servicios row bg-info-color">
+            <div class="col-xl-12 col-lg-12">
+              <h2>SERVICIOS</h2>
+            </div>
+            <div class="servicios1 bg-info-color col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+               <img src="inicio/tiendaOnline.png" alt="">
+               <p>Tienda Online</p>
+             </div>
+             <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+               <img src="inicio/cms.png" alt="">
+               <p>CMS's</p>
+             </div>
+             <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                 <img src="inicio/webMedida.png" alt="">
+                 <p>Web a medida</p>
+             </div>
+             <div class="servicios2 row">
+               <div class="servicios1 col-xl-4 offset-xl-2 col-lg-4 offset-lg-2 col-md-4 offset-md-2 col-sm-4 col-4">
+                   <img src="inicio/seo.png" alt="">
+                   <p>Posicionamiento SEO</p>
+               </div>
+               <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                <img src="inicio/corporativa.png" alt="">
+                <p>Corporativa</p>
+              </div>
+             </div>
 
+          </div>
+        <!-- <div class="filtros">
+          <h3>Filtra entre nuestros proyectos:</h3>
+          <ul>
+            <li><button class="btn btn-info" onclick="verPorPrecioMas(p)">Más barato primero</button></li>
+            <li><button class="btn btn-info" onclick="verPorPrecioMenos(p)">Más caro primero</button></li>
+            <li><button class="btn btn-info" onclick="verPorUbicacion()">Tienda proximidad</button></li>
+            <li><button class="btn btn-info" onclick="verVegano()">Vegano</button></li>
+            <li><button class="btn btn-info" onclick="recarga()">Ver Todo</button></li>
+            <li><button class="btn btn-info" onclick="navegarCarrito()">Mi compra</button></li>
+            <li><button class="btn btn-info" onclick="condCompraOnline()">Condiciones compra online</button></li>
+          </ul>
+        </div>
+        <div id="cuerpo">
+
+        </div>
+        <script src="scripts/productos.js" charset="utf-8"></script>
+        <script src="scripts/surtido.class.js" charset="utf-8"></script>
+        <script src="scripts/scriptHome.js" charset="utf-8"></script> -->
         </div>
     </div>
     <div  id="pie" class="row  bg-dark text-white ">
