--- a/Javi.html
+++ b/Javi.html
@@ -1,27 +1,43 @@
 <html>
 <head>
-    <title>JAVIER</title>
+    <title>Codigo base</title>
     <meta charset="UTF-8">
-     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/master.css">
     <!-- link a el css del reproductor mp3 -->
     <link rel="stylesheet" href="javi/reproductorCss.css">
     <!-- link a el js del reproductor mp3 -->
     <link rel="stylesheet" href="javi/reproductorScript.js">
     <!-- link a el css general de la pagina javi.html -->
     <link rel="stylesheet" href="javi/CssJaviHtml.css">
+    <link rel="stylesheet" href="javi/scriptQuSom.js">
 
     <script type="text/javascript">
       $(document).ready(function(){
-        $('#foto1').hover(function(){
-          $(this).css("opacity","0.4");
-          $('</p>').css("color","red").html("Animaciones psicodelicas");
-        });
-        $('#foto1').css("opacity","1");
+        $(".tercera,.segunda").css("display","none");
+        // $(".tercera").hide();
+        // $(".segunda").hide();
+        var contador = 0;
+        $(".izquierda").click(function(){
+          contador++;
+          if (contador==1) {
+            $(".primera").hide();
+            $(".segunda").fadeIn(2000);
 
+          }else if (contador==2) {
+            // $(".tercera").css("display","block");
+            // $(".segunda").css("display","none");
+
+          }else if (contador>2) {
+            // $(".primera").css("display","block");
+            // $(".tercera").css("display","none");
+            contador=0;
+          }
+        });
       });
 
 
@@ -35,44 +51,38 @@
       z-index: -1;
     }
 .botones{
-      margin-top: 250px;
+      margin-top: 550px;
       width: 100%;
     }
     .derecha{
-      float:right;
-      width: 2%;
-      height: 10%;
-      opacity: 0.5;
+      float:center;
+      opacity: 0.2;
+      border: black;
       background-color: black;
-      border-color: black;
       color: white;
-      font-weight: bold;
-      font-size: 1.4em;
+      font-size: 1em;
     }
 .izquierda{
-      float: left;
-      margin-left: 3%;
-      width: 2%;
-      height: 10%;
-      opacity: 0.5;
+      float: center;
+      margin-left: 50%;
+      opacity: 0.2;
+      border: black;
       background-color: black;
-      border-color: black;
       color: white;
-      font-weight: bold;
-      font-size: 1.4em;
+      font-size: 1em;
 
     }
     .izquierda:hover,.derecha:hover{
       opacity:0.7;
     }
-.contacto{
+.infoProyectos{
       position:absolute;
       z-index: 1;
       color: white;
       margin-top: 120px;
       width: 80%;
     }
-    .contacto h1{
+    .infoProyectos h1{
       margin-bottom: 20px;
     }
     </style>
@@ -83,7 +93,7 @@
     <div id="contenido">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <img id="logo" src="quienesSomos/logo1.png" alt="Logotipo de la pagina web">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -94,20 +104,19 @@
                   <li class="nav-item">
                     <a class="nav-link" href="inicio.html">Inicio</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quienes Somos</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="Eric.html">Eric</a>
-                      <a class="dropdown-item" href="Celia.html">Celia</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="Javi.html">Javier</a>
+                  <div class="btn-group">
+                    <button href="#" type="button" class="btn navbar btn-dark">Quienes somos</button>
+                    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <span class="sr-only"></span>
+                    </button>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">Javier</a>
+                      <a class="dropdown-item" href="#">Eric</a>
+                      <a class="dropdown-item" href="#">Celia</a>
                     </div>
-                  </li>
+                  </div>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Servicios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Catalogo</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -117,108 +126,133 @@
                   </li>
               </ul>
           </div>
+          <div class="usuario">
+            <ul>
+              <li><a href="#"><i class="fas fa-user"></i></a></li>
+            </ul>
+          </div>
+
         </nav>
           </header>
         </div>
-        <div class="row pt-5">
-            <div class="">
-              <section class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                  <img src="quienesSomos/javi.jpg" alt="" id="Javi">
-                  <h2>JAVIER</h2>
-                  <p>En los proyectos suelo dedicarme a la parte de animaciones, música y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada. Soy: observador, meticuloso, metódico, paciente y autodidacta. Me gusta la lógica y me considero una persona centrada con toques de "sana locura".</p>
-                </article>
-                <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                  <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
-                  <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                      <img src="javi/proy1.png" alt="" class="fondo">
-                      <div class="botones">
-                        <button type="button" name="button" class="izquierda"> <i class="fas fa-angle-left"></i> </button>
-                        <button type="button" name="button" class="derecha"> <i class="fas fa-angle-right"></i> </button>
-                      </div>
-                    </div>
-                    <div class="contacto row col-xl-5 offset-xl-5">
-                      <div class="primera">
 
-                      </div>
-                      <div class="segunda">
-
-                      </div>
-                      <div class="tercera">
-
-                      </div>
-                    </div>
-                </article>
-
-                <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-                  <div class="comentario">
-                    <p>"Some people want something to happen, others dream of it happening , others make it happen" <strong>Michael Jordan</strong></p>
+        <div id="cont" class="row pt-5">
+        <div class="">
+          <section class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+            <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+              <img src="quienesSomos/javi.jpg" alt="" id="Javi">
+              <h2>JAVIER</h2>
+              <p>En los proyectos suelo dedicarme a la parte de animaciones, música y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada. Soy: observador, meticuloso, metódico, paciente y autodidacta. Me gusta la lógica y me considero una persona centrada con toques de "sana locura".</p>
+            </article>
+            <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+              <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
+              <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                  <img src="javi/proy1.png" alt="" class="fondo">
+                  <div class="botones">
+                    <button type="button" name="button" class="izquierda"> <i class="far fa-circle"></i> </button>
+                    <button type="button" name="button" class="derecha"> <i class="far fa-circle"></i> </button>
                   </div>
-                </article>
-                <div class="social">
-  		              <ul>
-  			                 <li><a href="https://www.facebook.com/javier.elnuevo.9" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
-  			                 <li><a href="https://twitter.com/MrSubconsciente" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
-  			                 <li><a href="https://plus.google.com/u/0/113554313451333214332" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
-  			                 <li><a href="https://www.pinterest.es/javinico08/" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
-  			                 <li><a href="mailto:javinico08@gmail.com" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
-  		             </ul>
-  	           </div>
-                <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-                  <div class="reproductor">
-                    <audio id="player">
+                </div>
+                <div class="infoProyectos row col-xl-5 offset-xl-5">
+                  <div class="primera">
 
-                         <source src="javi/audio/.ogg" type="audio/ogg">
-
-                         <source src="javi/audio/.mp3" type="audio/mpeg"/>
-                     </audio>
-                     <div class="btn-group">
-                       <a class="masVol" onclick="document.getElementById('player').volume+=0.1" class="btn btn-inverse"><i class="icon-white glyphicon glyphicon-plus-sign"></i></a>
-                       <a class="mute" onclick="mute()" class="btn btn-inverse"><i class="icon-white icon-stop"></i></a>
-                       <a class="play" onclick="document.getElementById('player').play()" class="btn btn-inverse"><i class="icon-white icon-play"></i></a>
-                       <a class="pause" onclick="document.getElementById('player').pause()" class="btn btn-inverse"><i class="icon-white icon-pause"></i></a>
-                       <a class="menosVol" onclick="document.getElementById('player').volume-=0.1" class="btn btn-inverse"><i class="icon-white glyphicon glyphicon-minus-sign"></i></a>
-                     </div>
                   </div>
+                  <div class="segunda">
 
-                </article>
-                <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-                  <div class="mensajesDirectos ">
-                      <br style="clear:both">
-                      <div class="form-group col-md-4 ">
-                        <label id="messageLabel" for="message">Escribe tu mensaje directo</label>
-                        <textarea class="form-control input-sm " type="textarea" id="mensaje" placeholder="Mensaje..." maxlength="140" rows="7"></textarea>
-                        <span class="help-block"><p id="mensajeInferior" class="help-block ">El maximo de caracteres es 140.</p></span>
-                      </div>
-                      <br style="clear:both">
-                      <div class="form-group col-md-2">
-                        <button class="form-control input-sm btn btn-success disabled" id="btnSubmit" name="btnSubmit" type="button" style="height:35px"> Enviar</button>
-                      </div>
                   </div>
-                </article>
-              </section>
+                  <div class="tercera">
+
+                  </div>
+                </div>
+            </article>
+
+            <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+              <div class="comentario">
+                <p>"Some people want something to happen, others dream of it happening , others make it happen" <strong>Michael Jordan</strong></p>
+              </div>
+            </article>
+            <div class="social">
+                <ul>
+                     <li><a href="https://www.facebook.com/javier.elnuevo.9" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                     <li><a href="https://twitter.com/MrSubconsciente" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="https://plus.google.com/u/0/113554313451333214332" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
+                     <li><a href="https://www.pinterest.es/javinico08/" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+                     <li><a href="mailto:javinico08@gmail.com" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
+               </ul>
+           </div>
+            <!-- <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+              <div class="reproductor">
+                <audio id="player">
+
+                     <source src="javi/audio/.ogg" type="audio/ogg">
+
+                     <source src="javi/audio/.mp3" type="audio/mpeg"/>
+                 </audio>
+                 <div class="btn-group">
+                   <a class="masVol" onclick="document.getElementById('player').volume+=0.1" class="btn btn-inverse"><i class="icon-white glyphicon glyphicon-plus-sign"></i></a>
+                   <a class="mute" onclick="mute()" class="btn btn-inverse"><i class="icon-white icon-stop"></i></a>
+                   <a class="play" onclick="document.getElementById('player').play()" class="btn btn-inverse"><i class="icon-white icon-play"></i></a>
+                   <a class="pause" onclick="document.getElementById('player').pause()" class="btn btn-inverse"><i class="icon-white icon-pause"></i></a>
+                   <a class="menosVol" onclick="document.getElementById('player').volume-=0.1" class="btn btn-inverse"><i class="icon-white glyphicon glyphicon-minus-sign"></i></a>
+                 </div>
+              </div>
+
+            </article> -->
+            <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+              <div class="mensajesDirectos ">
+                  <br style="clear:both">
+                  <div class="form-group col-md-4 ">
+                    <label id="messageLabel" for="message">Escribe tu mensaje directo</label>
+                    <textarea class="form-control input-sm " type="textarea" id="mensaje" placeholder="Mensaje..." maxlength="140" rows="7"></textarea>
+                    <span class="help-block"><p id="mensajeInferior" class="help-block ">El maximo de caracteres es 140.</p></span>
+                  </div>
+                  <br style="clear:both">
+                  <div class="form-group col-md-2">
+                    <button class="form-control input-sm btn btn-success disabled" id="btnSubmit" name="btnSubmit" type="button" style="height:35px"> Enviar</button>
+                  </div>
+              </div>
+            </article>
+          </section>
+    </div>
         </div>
     </div>
-    <div  id="pie" class="row bg-dark text-white ">
-      <footer></footer>
-      <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Contacta</h1>
-        <i class="fas fa-phone fa-2x"></i>
-        <a href="tel:+34628152140">628-152-140</a><br>
-        <i class="fas fa-at fa-2x"></i>
-        <a href="mail:javinico08@gmail.com">Javinico08@gmail.com</a>
+    <div  id="pie" class="row  bg-dark text-white ">
+      <div class="row col-xl-6 col-lg-6 col-md-6">
+        <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12">
+          <h1>Contacta</h1>
+            <i class="fas fa-phone fa-2x"></i>
+            <a href="tel:+34555000555">555-000-555</a><br>
+            <i class="fas fa-at fa-2x"></i>
+            <a href="mail:correo@gmail.com">correo@gmail.com</a>
+        </div>
+        <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12">
+          <h1>Servicios</h1>
+          <a href="#">Desarrollo web</a><br>
+          <a href="#">Desarrollo cliente</a><br>
+          <a href="#">Desarrollo Servidor</a>
+        </div>
+        <div class="col-xl-3 col-lg-4 col-md-12 col-sm-12">
+          <h1>Legalidad</h1>
+          <a href="#">Aviso legal</a><br>
+          <a href="#">Política de privacidad</a>
+        </div>
+        <div class="conocenos col-xl-12 col-lg-12 col-md-12">
+          <ul>
+            <li><a href="https://www.facebook.com/javier.elnuevo.9" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://twitter.com/MrSubconsciente" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://plus.google.com/u/0/113554313451333214332" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
+            <li><a href="https://www.pinterest.es/javinico08/" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+            <li><a href="mailto:javinico08@gmail.com" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
+         </ul>
       </div>
-      <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Especialidades</h1>
-        <p>Diseño web</p>
-        <p>Desarrollo cliente</p>
-      </div>
-      <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Oficinas</h1>
-        <img id="mapa" src="imagen.png" alt="mapa">
+    </div>
+      <div class="oficinas col-xl-3 col-lg-4 col-md-12">
+        <p id="coordenadas"></p>
+        <img id="map" src="https://maps.googleapis.com/maps/api/staticmap?center=Madrid,Spain&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C39.4548243,-0.3957476&markers=color:green%7Clabel:G%7C39.985539,-0.0504106&markers=color:red%7Clabel:C%7C39.4560627,-0.4033149&markers=color:pink%7Clabel:C%7C38.8634349,-6.9862087&key=AIzaSyByt5uPw-KnKfQTNCaYgMQTkVY0-NpJ2u8" alt="mapa">
       </div>
 
     </div>
+
   </div>
 
     <!-- Inserta aquí los JS -->
