--- a/inicio.html
+++ b/inicio.html
@@ -63,8 +63,10 @@
         });
         var us = $(".usuario").val();
         if(us == ""){
-          
+
         }
+
+      
     });
     </script>
 
@@ -118,20 +120,26 @@
         </div>
 
 
-        <div class="contenido row pt-5">
+        <div class="contenido row w-100">
 
-          <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12">
-              <img src="inicio/fondo.jpg" alt="" class="fondo">
+          <div class="row w-100">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+              <div class="fondo ">
+                <img src="inicio/fondo.jpg" alt="" >
+              </div>
+
               <div class="botones">
                 <button type="button" name="button" class="izquierda"> <i class="fas fa-angle-left"></i> </button>
                 <button type="button" name="button" class="derecha"> <i class="fas fa-angle-right"></i> </button>
               </div>
             </div>
 
+            </div>
 
 
 
-            <div class="contacto row col-xl-5 offset-xl-5 col-lg-5 offset-lg-5 col-md-5 offset-md-5">
+
+            <div class="contacto row col-xl-5 offset-xl-5 col-lg-5 offset-lg-5 col-md-8 offset-md-2 col-sm-8 offset-sm-2 col-8 offset-2">
               <div class="primera">
                 <h1>HOLA :)</h1>
                 <p>Somos <em>JECDesign</em> una empresa joven y emprendedora, nos dedicamos al servicio de desarrollo y diseño web.
@@ -190,28 +198,44 @@
                 <h2>SERVICIOS</h2>
               </div>
               <div class="servicios1 bg-info-color col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                <p>Tienda Online</p>
                  <img src="inicio/tiendaOnline.png" alt="">
-                 <p>Tienda Online</p>
+                 <div class="efecto">
+                   <p>hacemos unas tiendas online que te haras rico</p>
+                 </div>
+
                </div>
                <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                 <img src="inicio/cms.png" alt="">
                  <p>CMS's</p>
+                 <img src="inicio/cms.png" alt="">
+                 <div class="efecto">
+                   <p class="cms">hacemos cms una pagina mas basica pero mas barata</p>
+                 </div>
+
                </div>
                <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                 <p>Web a medida</p>
                    <img src="inicio/webMedida.png" alt="">
-                   <p>Web a medida</p>
+                   <div class="efecto">
+                     <p class="webm">web a medida cumpliendo los requisitos que pida el cliente siguiendo las especificaciones</p>
+                   </div>
                </div>
                <div class="servicios2 row">
                  <div class="servicios1 col-xl-4 offset-xl-2 col-lg-4 offset-lg-2 col-md-4 offset-md-2 col-sm-4 col-4">
+                   <p>Posicionamiento SEO</p>
                      <img src="inicio/seo.png" alt="">
-                     <p>Posicionamiento SEO</p>
+                     <div class="efecto">
+                       <p class="seo">hacemos posicionamiento seo y accesibilidad para que tu web se vea de las primeras en los buscadores de itnernet</p>
+                     </div>
                  </div>
                  <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                   <p>Corporativa</p>
                   <img src="inicio/corporativa.png" alt="">
-                  <p>Corporativa</p>
+                  <div class="efecto">
+                    <p class="corp">web especializadas en empresas corporativas</p>
+                  </div>
                 </div>
                </div>
-
             </div>
             <div class="trabajos row">
               <div class="col-xl-12 col-lg-12 col-md-12">
